@@ -23,7 +23,7 @@ AC_DEFUN([AX_SHOW_CONFIGURATION],
 	fi
 
 	echo
-	echo Package configuration for ${PACKAGE_NAME} ${PACKAGE_VERSION}:
+	echo Package configuration for ${PACKAGE_NAME} ${PACKAGE_VERSION} based on ${SVN_branch} rev. ${SVN_revision}:
 	echo -----------------------
 	echo Installation prefix: ${prefix}
 	echo Cross compilation:   ${CROSSC}
