@@ -338,7 +338,7 @@ static void Parse_XML_Callers (int rank, xmlDocPtr xmldoc, xmlNodePtr current_ta
 		if (!xmlStrcasecmp (tag->name, xmlTEXT) || !xmlStrcasecmp (tag->name, xmlCOMMENT))
 		{
 		}
-		/* Must the tracing facility obtain information about PACX callers? */
+		/* Must the tracing facility obtain information about MPI callers? */
 		else if (!xmlStrcasecmp (tag->name, TRACE_MPI))
 		{
 #if defined(MPI_SUPPORT)
@@ -371,6 +371,7 @@ static void Parse_XML_Callers (int rank, xmlDocPtr xmldoc, xmlNodePtr current_ta
                         mfprintf (stdout, PACKAGE_NAME": <%s> tag at <Callers> level will be ignored. This library does not support SHMEM.\n", TRACE_SHMEM);
 #endif
 		}
+		/* Must the tracing facility obtain information about PACX callers? */
 		else if (!xmlStrcasecmp (tag->name, TRACE_PACX))
 		{
 #if defined(PACX_SUPPORT)
@@ -385,6 +386,22 @@ static void Parse_XML_Callers (int rank, xmlDocPtr xmldoc, xmlNodePtr current_ta
 			XML_FREE(enabled);
 #else
 			mfprintf (stdout, PACKAGE_NAME": <%s> tag at <Callers> level will be ignored. This library does not support PACX.\n", TRACE_PACX);
+#endif
+		}
+		else if (!xmlStrcasecmp (tag->name, TRACE_DYNAMIC_MEMORY))
+		{
+			xmlChar *enabled = xmlGetProp_env (rank, tag, TRACE_ENABLED);
+#if defined(INSTRUMENT_DYNAMIC_MEMORY)
+			if (enabled != NULL && !xmlStrcasecmp (enabled, xmlYES))
+			{
+				char *callers = (char*) xmlNodeListGetString_env (rank, xmldoc, tag->xmlChildrenNode, 1);
+				if (callers != NULL)
+					Parse_Callers (rank, callers, CALLER_DYNAMIC_MEMORY);
+				XML_FREE(callers);
+			}
+			XML_FREE(enabled);
+#else
+			mfprintf (stdout, PACKAGE_NAME": <%s> tag at <Callers> level will be ignored. This library does not support dynamic memory instrumentation.\n", TRACE_DYNAMIC_MEMORY);
 #endif
 		}
 		/* Must the tracing facility obtain information about callers at sample points? */
